--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ numpy = "*"
 scikit-learn = "*"
 category-encoders = "*"
 python-dotenv = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
